# Nifty_Fifty_Prediction

./: .gitignore  README.md  pyproject.toml
examples/: generate_demo_assets.py
src/nifty_prediction/: __init__.py  data.py  evaluate.py  model.py  normalize.py  pipeline.py  split.py  windowing.py
